--- a/tp5/application/index/view/index/agenda.html
+++ b/tp5/application/index/view/index/agenda.html
@@ -38,6 +38,8 @@
 	<!-- Additional styles -->
 	<link rel="stylesheet" href="__PUBLIC__/css/styles/agenda.css?v=1">
 	<link rel="stylesheet" href="__PUBLIC__/css/styles/switches.css?v=1">
+	<link rel="stylesheet" href="__PUBLIC__/css/styles/modal.css?v=1">
+	<link rel="stylesheet" href="__PUBLIC__/css/styles/progress-slider.css?v=1">
 
 	<!-- JavaScript at bottom except for Modernizr -->
 	<script src="__PUBLIC__/js/libs/modernizr.custom.js"></script>
@@ -95,7 +97,13 @@
 
 			<h3 class="thin">Weekly agenda</h3>
 
-			<p>Wonder how it looks on smaller screens? Try resizing your browser!</p>
+			<p>
+			<span class="button-group ">
+				<a href="javascript:openModal1()" title="Add user" class="button icon-plus-round">add</a>
+				<a href="javascript:openModal2()" title="Add user" class="button icon-plus-round">delect</a>
+				<a href="javascript:openLoadingModal()" title="Reload list" class="button icon-redo"></a>
+			</span>
+			</p>
 
 			<div class="agenda with-header auto-scroll">
 
@@ -364,10 +372,211 @@
 	<script src="__PUBLIC__/js/developr.tooltip.js"></script>
 	<script src="__PUBLIC__/js/developr.agenda.js"></script>
 
+
+
+	
+	<script src="__PUBLIC__/js/developr.message.js"></script>
+	<script src="__PUBLIC__/js/developr.modal.js"></script>
+
+
+
+	<script src="__PUBLIC__/js/developr.progress-slider.js"></script>
+
+	<script src="__PUBLIC__/js/developr.confirm.js"></script>
+	<script src="__PUBLIC__/js/developr.agenda.js"></script>
+	<script src="__PUBLIC__/js/developr.tabs.js"></script>		<!-- Must be loaded last -->
+
+	<!-- Tinycon -->
+	<script src="__PUBLIC__/js/libs/tinycon.min.js"></script>
+
 	<script>
 
 		// Call template init (optional, but faster if called manually)
 		$.template.init();
+
+		function openModal1()
+		{
+
+			$.modal({
+				content: '<p>议程新增</p>'+
+						  '<form action="addagenda" method="post" id="form1">'+
+						  '<ul class="simple-list with-icon">'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>星期</td><input type="text" name="day" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>议程开始时间</td><input type="text" name="timestart" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>议程结束时间</td><input type="text" name="timeend" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>议程时间</td><input type="text" name="timeprocess" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>议程事件</td><input type="text" name="thing" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>议程重要性</td><input type="text" name="status" value="" required="required"></div>'+
+						  '<button type="submit">提交</button>'+
+						  '</ul>'+
+						  '</form>',
+				title: 'Example modal window',
+				width: 300,
+				scrolling: false,
+				actions: {
+					'Close' : {
+						color: 'red',
+						click: function(win) { win.closeModal(); }
+					},
+					'Center' : {
+						color: 'green',
+						click: function(win) { win.centerModal(true); }
+					},
+					'Refresh' : {
+						color: 'blue',
+						click: function(win) { win.closeModal(); }
+					},
+					'Abort' : {
+						color: 'orange',
+						click: function(win) { win.closeModal(); }
+					}
+				},
+				buttons: {
+					'Close': {
+						classes:	'huge blue-gradient glossy full-width',
+						click:		function(win) { win.closeModal(); }
+					}
+				},
+				buttonsLowPadding: true
+			});
+		};
+
+
+		function openModal2()
+		{
+
+			$.modal({
+				content: '<p>议程删除</p>'+
+						  '<form action="decagenda" method="post">'+
+						  '<ul class="simple-list with-icon">'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>星期</td><input type="text" name="day" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>议程时间</td><input type="text" name="timeprocess" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>议程事件</td><input type="text" name="thing" value="" required="required"></div>'+
+						  '<button type="submit">提交</button>'+
+						  '</ul>'+
+						  '</form>',
+				title: 'Example modal window',
+				width: 300,
+				scrolling: false,
+				actions: {
+					'Close' : {
+						color: 'red',
+						click: function(win) { win.closeModal(); }
+					},
+					'Center' : {
+						color: 'green',
+						click: function(win) { win.centerModal(true); }
+					},
+					'Refresh' : {
+						color: 'blue',
+						click: function(win) { win.closeModal(); }
+					},
+					'Abort' : {
+						color: 'orange',
+						click: function(win) { win.closeModal(); }
+					}
+				},
+				buttons: {
+					'Close': {
+						classes:	'huge blue-gradient glossy full-width',
+						click:		function(win) { win.closeModal(); }
+					}
+				},
+				buttonsLowPadding: true
+			});
+		};
+
+		// Demo loading modal
+		function openLoadingModal()
+		{
+			var timeout;
+
+			$.modal({
+				contentAlign: 'center',
+				width: 240,
+				title: 'Loading',
+				content: '<div style="line-height: 25px; padding: 0 0 10px"><span id="modal-status">Contacting server...</span><br><span id="modal-progress">0%</span></div>',
+				buttons: {},
+				scrolling: false,
+				actions: {
+					'Cancel': {
+						color:	'red',
+						click:	function(win) { win.closeModal(); }
+					}
+				},
+				onOpen: function()
+				{
+						// Progress bar
+					var progress = $('#modal-progress').progress(100, {
+							size: 200,
+							style: 'large',
+							barClasses: ['anthracite-gradient', 'glossy'],
+							stripes: true,
+							darkStripes: false,
+							showValue: false
+						}),
+
+						// Loading state
+						loaded = 0,
+
+						// Window
+						win = $(this),
+
+						// Status text
+						status = $('#modal-status'),
+
+						// Function to simulate loading
+						simulateLoading = function()
+						{
+							++loaded;
+							progress.setProgressValue(loaded+'%', true);
+							if (loaded === 100)
+							{
+								progress.hideProgressStripes().changeProgressBarColor('green-gradient');
+								status.text('Done!');
+								/*win.getModalContentBlock().message('Content loaded!', {
+									classes: ['green-gradient', 'align-center'],
+									arrow: 'bottom'
+								});*/
+								setTimeout(function() { win.closeModal(); }, 1500);
+							}
+							else
+							{
+								if (loaded === 1)
+								{
+									status.text('Loading data...');
+									progress.changeProgressBarColor('blue-gradient');
+								}
+								else if (loaded === 25)
+								{
+									status.text('Loading assets (1/3)...');
+								}
+								else if (loaded === 45)
+								{
+									status.text('Loading assets (2/3)...');
+								}
+								else if (loaded === 85)
+								{
+									status.text('Loading assets (3/3)...');
+								}
+								else if (loaded === 92)
+								{
+									status.text('Initializing...');
+								}
+								timeout = setTimeout(simulateLoading, 50);
+							}
+						};
+
+					// Start
+					timeout = setTimeout(simulateLoading, 2000);
+				},
+				onClose: function()
+				{
+					// Stop simulated loading if needed
+					clearTimeout(timeout);
+				}
+			});
+		};
 
 	</script>
 </body>
