--- a/tp5/application/index/view/index/contacts.html
+++ b/tp5/application/index/view/index/contacts.html
@@ -39,6 +39,7 @@
 	<link rel="stylesheet" href="__PUBLIC__/css/styles/form.css?v=1">
 	<link rel="stylesheet" href="__PUBLIC__/css/styles/switches.css?v=1">
 	<link rel="stylesheet" href="__PUBLIC__/css/styles/table.css?v=1">
+	<link rel="stylesheet" href="__PUBLIC__/css/styles/modal.css?v=1">
 
 	<!-- DataTables -->
 	<link rel="stylesheet" href="__PUBLIC__/js/libs/DataTables/jquery.dataTables.css?v=1">
@@ -97,21 +98,13 @@
 
 		<div class="with-padding">
 
-			<p class="wrapped left-icon icon-info-round">
-				Tables are responsive, too! Try resizing your browser
-			</p>
-
-			<h4>Styled table with advanced sorting</h4>
-
-			<p>This example uses the plugin <a href="http://datatables.net">DataTables</a>:</p>
-
 			<table class="table responsive-table" id="sorting-advanced">
 
 				<thead>
 					<tr>
 						<th scope="col"><input type="checkbox" name="check-all" id="check-all" value="1"></th>
-						<th scope="col">Text</th>
-						<th scope="col" width="15%" class="align-center hide-on-mobile">Date</th>
+						<th scope="col">职员编号</th>
+						<th scope="col" width="15%" class="align-center hide-on-mobile">职员姓名</th>
 						<th scope="col" width="15%" class="align-center hide-on-mobile-portrait">Status</th>
 						<th scope="col" width="15%" class="hide-on-tablet">Tags</th>
 						<th scope="col" width="60" class="align-center">Actions</th>
@@ -127,150 +120,19 @@
 				</tfoot>
 
 				<tbody>
-					<tr>
+					
+					
+						{volist name="result" id="vo"}
+						<tr>
 						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-1" value="1"></th>
-						<td>John Doe</td>
-						<td>Jul 5, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-2" value="2"></th>
-						<td>John Appleseed</td>
-						<td>Jul 5, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag orange-bg">Non-verified</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-3" value="3"></th>
-						<td>Sheldon Cooper</td>
-						<td>Jul 4, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-4" value="4"></th>
-						<td>Rage Guy</td>
-						<td>Jun 25, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag red-bg">Fake</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-5" value="5"></th>
-						<td>Thomas A. Anderson</td>
-						<td>Jun 16, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-6" value="6"></th>
-						<td>Jane Doe</td>
-						<td>May 19, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-1" value="1"></th>
-						<td>John Doe</td>
-						<td>Jul 5, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-2" value="2"></th>
-						<td>John Appleseed</td>
-						<td>Jul 5, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag orange-bg">Non-verified</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-3" value="3"></th>
-						<td>Sheldon Cooper</td>
-						<td>Jul 4, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-4" value="4"></th>
-						<td>Rage Guy</td>
-						<td>Jun 25, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag red-bg">Fake</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-5" value="5"></th>
-						<td>Thomas A. Anderson</td>
-						<td>Jun 16, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-6" value="6"></th>
-						<td>Jane Doe</td>
-						<td>May 19, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-1" value="1"></th>
-						<td>John Doe</td>
-						<td>Jul 5, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-2" value="2"></th>
-						<td>John Appleseed</td>
-						<td>Jul 5, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag orange-bg">Non-verified</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-3" value="3"></th>
-						<td>Sheldon Cooper</td>
-						<td>Jul 4, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-4" value="4"></th>
-						<td>Rage Guy</td>
-						<td>Jun 25, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag red-bg">Fake</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-5" value="5"></th>
-						<td>Thomas A. Anderson</td>
-						<td>Jun 16, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small> <small class="tag green-bg">Valid</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
-					<tr>
-						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-6" value="6"></th>
-						<td>Jane Doe</td>
-						<td>May 19, 2011</td>
-						<td>Enabled</td>
-						<td><small class="tag">User</small> <small class="tag">Client</small></td>
-						<td class="low-padding align-center"><a href="#" class="button compact icon-gear">Edit</a></td>
-					</tr>
+						<td>{$vo['id']}</td>
+						<td>{$vo['name']}</td>
+						<td>{$vo['ustatus']}</td>
+						<td><small class="tag">{$vo.tag}</small></td>
+						<td class="low-padding align-center"><a href="javascript:openModaledit()" class="button compact icon-gear">Edit</a><a href="javascript:openModaldelect()" class="button compact icon-gear">DEL</a></td>
+						</tr>		
+						{/volist}
+					
 				</tbody>
 
 			</table>
@@ -411,11 +273,116 @@
 	<script src="__PUBLIC__/js/libs/jquery.tablesorter.min.js"></script>
 	<script src="__PUBLIC__/js/libs/DataTables/jquery.dataTables.min.js"></script>
 
+	<script src="__PUBLIC__/js/developr.message.js"></script>
+	<script src="__PUBLIC__/js/developr.modal.js"></script>
+
+
+
+	<script src="__PUBLIC__/js/developr.progress-slider.js"></script>
+
+	<script src="__PUBLIC__/js/developr.confirm.js"></script>
+	<script src="__PUBLIC__/js/developr.agenda.js"></script>
+	<script src="__PUBLIC__/js/developr.tabs.js"></script>		<!-- Must be loaded last -->
+
+	<!-- Tinycon -->
+	<script src="__PUBLIC__/js/libs/tinycon.min.js"></script>
+
 	<script>
 
 		// Call template init (optional, but faster if called manually)
 		$.template.init();
 
+		//edit user
+		function openModaledit()
+		{
+			
+			$.modal({
+				content: '<p>员工人事管理</p>'+
+						  '<form action="updateuser" method="post" id="form1">'+
+						  '<ul class="simple-list with-icon">'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>职员编号</td><input type="text" name="id" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>姓名</td><input type="text" name="name" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>职位</td><input type="text" name="ustatus" value="" ></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>评价</td><input type="text" name="tag" value="" ></div>'+
+						  '<button type="submit">提交</button>'+
+						  '</ul>'+
+						  '</form>',
+				title: 'Example modal window',
+				width: 300,
+				scrolling: false,
+				actions: {
+					'Close' : {
+						color: 'red',
+						click: function(win) { win.closeModal(); }
+					},
+					'Center' : {
+						color: 'green',
+						click: function(win) { win.centerModal(true); }
+					},
+					'Refresh' : {
+						color: 'blue',
+						click: function(win) { win.closeModal(); }
+					},
+					'Abort' : {
+						color: 'orange',
+						click: function(win) { win.closeModal(); }
+					}
+				},
+				buttons: {
+					'Close': {
+						classes:	'huge blue-gradient glossy full-width',
+						click:		function(win) { win.closeModal(); }
+					}
+				},
+				buttonsLowPadding: true
+			});
+		};
+
+
+		//uesr delect
+		function openModaldelect()
+		{
+			
+			$.modal({
+				content: '<p>员工人事管理</p>'+
+						  '<form action="deluser" method="post" id="form1">'+
+						  '<ul class="simple-list with-icon">'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>职员编号</td><input type="text" name="id" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>姓名</td><input type="text" name="name" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>职位</td><input type="text" name="ustatus" value="" ></div>'+
+						  '<button type="submit">提交</button>'+
+						  '</ul>'+
+						  '</form>',
+				title: 'Example modal window',
+				width: 300,
+				scrolling: false,
+				actions: {
+					'Close' : {
+						color: 'red',
+						click: function(win) { win.closeModal(); }
+					},
+					'Center' : {
+						color: 'green',
+						click: function(win) { win.centerModal(true); }
+					},
+					'Refresh' : {
+						color: 'blue',
+						click: function(win) { win.closeModal(); }
+					},
+					'Abort' : {
+						color: 'orange',
+						click: function(win) { win.closeModal(); }
+					}
+				},
+				buttons: {
+					'Close': {
+						classes:	'huge blue-gradient glossy full-width',
+						click:		function(win) { win.closeModal(); }
+					}
+				},
+				buttonsLowPadding: true
+			});
+		};
 		// Table sort - DataTables
 		var table = $('#sorting-advanced');
 		table.dataTable({
