--- a/tp5/application/index/view/index/zhuye.html
+++ b/tp5/application/index/view/index/zhuye.html
@@ -146,6 +146,8 @@ switch(month+1)
  //document.getElementById("info1").innerHTML=month+1;
 document.getElementById("info1").innerHTML=month;
 document.getElementById("info2").innerHTML=date;
+document.getElementById('idata').innerHTML=date;
+document.getElementById('imonth').innerHTML=month;
 //alert("2333");
 
 } 
@@ -478,17 +480,28 @@ document.getElementById("info2").innerHTML=date;
 
 			<ul class="unstyled-list">
 				<li class="title-menu">Today's event</li>
+
+
 				<li>
 					<ul class="calendar-menu">
 						<li>
 							<a href="#" title="See event">
-								<time datetime="2011-02-24"><b>24</b> Feb</time>
-								<small class="green">10:30</small>
+								<time datetime="2011-02-24"><b><span id="idata"></span></b> <span id="imonth"></span></time>
+								<small class="green">
+									<script type="text/javascript">
+									var d = new Date()
+									document.write(d.getHours())
+									document.write(":")
+									document.write(d.getMinutes())
+									</script>
+								</small>
 								Event's description
 							</a>
 						</li>
 					</ul>
 				</li>
+
+
 				<li class="title-menu">New messages</li>
 				<li>
 					<ul class="message-menu">
@@ -818,6 +831,15 @@ document.getElementById("info2").innerHTML=date;
         year--;
     }
 		var iWeek=(dates+2*month+3*(month+1)/5+year+year/4-year/100+year/400)%7;
+		var idata;
+		if(iWeek+3 >7)
+		{
+			idata = iWeek+3-7;
+		}
+		else
+		{
+			idata = iWeek+3;
+		}
 		// Remote controls
 		$('#agenda-previous').click(function(event)
 		{
@@ -827,7 +849,7 @@ document.getElementById("info2").innerHTML=date;
 		$('#agenda-today').click(function(event)
 		{
 			event.preventDefault();
-			agenda.scrollAgendaFirstColumn(iWeek+3);
+			agenda.scrollAgendaFirstColumn(idata);
 		});
 		$('#agenda-next').click(function(event)
 		{
