--- a/tp5/application/index/view/index/medias.html
+++ b/tp5/application/index/view/index/medias.html
@@ -356,8 +356,8 @@
 			<ul id="access" class="children-tooltip">
 				<li><a href="message.html" title="Messages"><span class="icon-inbox"></span><span class="count">2</span></a></li>
 				<li><a href="agenda.html" title="Calendar"><span class="icon-calendar"></span></a></li>
-				<li><a href="login.html" title="Profile"><span class="icon-user"></span></a></li>
-				<li class="disabled"><span class="icon-gear"></span></li>
+				<li><a href="personal.html" title="Profile"><span class="icon-user"></span></a></li>
+				<li><a href="login.html" title="Login"><span class="icon-gear"></span></a></li>
 			</ul>
 
 		
